<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hoperun.floatingtwo.MainActivity">

    <!--创建Menu  并且定义不同的样式-->
    <com.example.hoperun.floatingtwo.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        fab:fab_expandDirection="up"
        fab:fab_addButtonColorNormal="@color/float_menu_default_color"
        fab:fab_addButtonColorPressed="@color/float_menu_default_pressed_color"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_addButtonSize="large"
        fab:fab_labelStyle="@style/menu_labels_style">


        <!--创建子view   并且给予不同的样式-->
        <com.example.hoperun.floatingtwo.FloatingActionButton
            android:id="@+id/float_action_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/share"
            fab:fab_colorNormal="@color/actionbar_edit_bg"
            fab:fab_colorPressed="@color/actionbar_edit_bg"
            fab:fab_icon="@drawable/ic_action_share"
            fab:fab_title="@string/share" />

        <com.example.hoperun.floatingtwo.FloatingActionButton
            android:id="@+id/float_action_archive"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/compress"
            fab:fab_colorNormal="@color/actionbar_edit_bg"
            fab:fab_colorPressed="@color/actionbar_edit_bg"
            fab:fab_icon="@drawable/ic_action_archives"
            fab:fab_title="@string/compress" />



        <com.example.hoperun.floatingtwo.FloatingActionButton
            android:id="@+id/float_action_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/delete"
            fab:fab_colorNormal="@color/actionbar_edit_bg"
            fab:fab_colorPressed="@color/actionbar_edit_bg"
            fab:fab_icon="@drawable/ic_action_delete"
            fab:fab_title="@string/delete" />

        <com.example.hoperun.floatingtwo.FloatingActionButton
            android:id="@+id/float_action_copy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/copy"
            fab:fab_colorNormal="@color/actionbar_edit_bg"
            fab:fab_colorPressed="@color/actionbar_edit_bg"
            fab:fab_icon="@drawable/ic_action_copy"
            fab:fab_title="@string/copy" />

        <com.example.hoperun.floatingtwo.FloatingActionButton
            android:id="@+id/float_action_cut"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:foregroundGravity="center"
            android:contentDescription="@string/cut"
            fab:fab_colorNormal="@color/actionbar_edit_bg"
            fab:fab_colorPressed="@color/actionbar_edit_bg"
            fab:fab_icon="@drawable/ic_action_cut"
            fab:fab_title="@string/cut" />

    </com.example.hoperun.floatingtwo.FloatingActionsMenu>

</LinearLayout>
